--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hell
+
+<!DOCTYPE html>
+ 
+<html lang="ja">
+ 
+<head>
+ 
+<meta charset="UTF-8">
+ 
+<title>Hello World</title>
+ 
+</head>
+ 
+<body>
+ 
+<h1>Hello World</h1>
+ 
+</body>
+ 
+</html>
