--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
 <meta charset="UTF-8">
  
-<title>Hello World</title>
+<title>Web開発の練習１</title>
  
 </head>
  
@@ -16,5 +16,12 @@
 <h1>Hello World</h1>
  
 </body>
- 
+<!--文字の大きさの練習--＞ 
+ <h1>Hello　World</h1>
+ <h2>Hello World</h2>
+ <h3>Hello World</h3>
+ <ol>
+ <li>ほげほげ</li>
+ <li>ほにゃらら</li>
+</ol>
 </html>
