--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
 </head>
  
 <body>
+
+ <!--文字の大きさの練習-->
  
-<h1>Hello World</h1>
+<h1>練習問題2.2</h1>
  
-</body>
-<!--文字の大きさの練習--＞ 
  <h1>Hello　World</h1>
+ 
  <h2>Hello World</h2>
+ 
  <h3>Hello World</h3>
+ 
  <ol>
- <li>ほげほげ</li>
- <li>ほにゃらら</li>
+  
+  <li>ほげほげ</li>
+  
+  <li>ほにゃらら</li>
+  
 </ol>
+ 
 </html>
