--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  
 <h1>練習問題2.2</h1>
  
- <h1>Hello　World</h1>
+<h1>Hello　World</h1>
  
  <h2>Hello World</h2>
  
@@ -29,6 +29,8 @@
   
   <li>ほにゃらら</li>
   
-</ol>
+ </ol>
+
+</body>
  
 </html>
