--- a/index.html
+++ b/index.html
@@ -91,14 +91,19 @@
   </li>
  </ul>
 
- <title>練習問題2.6</title>
+<h1> <title>練習問題2.6</title></h1>
+ 
  </head>
   <body>
   <p>テキスト入力：<input type="text"></p> 
- 
+
+   <from acion="xxx.php"method="post"><label>メール(type="email"):<input type="email</label>
 </body>
  
 </html>
 
 
 </dl>
+
+
+
