--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
   <body>
   <p>テキスト入力：<input type="text"></p> 
 
-   <from acion="xxx.php"method="post"><label>メール(type="email"):<input type="email</label>
+ <h1>練習問題2.7</h1>  
+   <from acion="xxx.php"method="post"><label>メール(type="email"):<input type="email
+                                                                name="email"></label><input type="submit"value=送信"></from>
 </body>
  
 </html>
