--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <tbody>
    <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
    </th><td>値段が時価で不安、予約が必要</td></tr>
-   <tr><th>回転寿司</th<td>値段が良心的、気楽に手に取れる
- </td><td>ネタが解凍もの、休みの日は混む</td></tr>
+   <tr><th>回転寿司</th><td>値段が良心的、気楽に手に取れる
+   </td><td>ネタが解凍もの、休みの日は混む</td></tr>
                                     
   </tbody>
  </table>
@@ -92,7 +92,6 @@
  </ul>
 
 <h1>練習問題2.6</h1>
- <title>練習問題2.6</title>
  
  </head>
   <body>
