--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
   <p>テキスト入力：<input type="text"></p> 
 
  <h1>練習問題2.7</h1>  
-   <from acion="xxx.php" method="post"><label>メール(type="email"):<input type="email
-                                                                name="email"></label><input type="submit"value=送信"></from>
+   <from acion="xxx.php" method="post">
+    <label>メール(type="email"):<input type="email
+                              name="email"></label><input type="submit"value=送信" ></from>
 </body>
  
 </html>
