--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
    <from acion="xxx.php" method="post">
     <label>メール(type="email"):<input type="email
                               name="email"></label><input type="submit"value=送信" ></from>
+
+ <br>
+ <from action="xxx.php" method="post"><label>URL(type="url"):<input type="url" name="url"></label>
 </body>
  
 </html>
