--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
   <p>テキスト入力：<input type="text"></p> 
 
  <h1>練習問題2.7</h1>  
-   <from acion="xxx.php" method="post">
+   <form action="xxx.php" method="post">
     <label>メール(type="email"):<input type="email
                               name=" email "></label><input type="submit"value=送信" ></from>
 
  <br>
- <from action="xxx.php" method="post"><label>URL(type="url"):<input type="url" name="url"></label>
+ <form action="xxx.php" method="post"><label>URL(type="url"):<input type="url" name="url"></label>
 </body>
  
 </html>
