--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
   <input type="submit" value="送信"></form>
 
  <br>
- <form action="xxx.php" method="post"><label>URL(type="url"):<input type="url" name="url"></label>
+ <form action="xxx.php" method="post"><label>URL(type="url"):<input type="url" name="url">
+ <input type="submit" value="送信">
+ </label>
+ </form>
 </body>
 </html>
