--- a/index.html
+++ b/index.html
@@ -208,6 +208,13 @@
      サッカー場の人工芝、ソフトボール場の舗装は水はけにも配慮、緩いアップダウンを付けたランニング走路にも足に優しい人工芝を特に選んでいます。</p>
     </section></a>
   </aside>
- 
+ <nav>
+  <ul>
+   <li><a href="htpps://sports.josai.ac.jp/club/dansiekiden/">
+   男子駅伝部</a></li>
+   <li><a href="htpps://sports.josai.ac.jp/club/densiekiden/">女子駅伝部</a></li>
+ <li><a>クラブ・サークル活動</a></li>
+  </ul>
+ </nav>
 </body>
 </html>
