--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
  
 <title>Web開発の練習１</title>
+ <link rel="stylesheet"href="mystyle.css"><!--この行を追加-->
+
  
 </head>
  
@@ -220,3 +222,5 @@
  </nav>
 </body>
 </html>
+
+
