--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html> 
 <html lang="ja">
 <head>
+ <meta charset="UTF-8">
+ <title>Web開発の練習２</title>
+ <link rel="stylesheet"href="mystyle.css">
+ <script src="myjs.js"></script><!--この行を追加-->
 
 <meta charset="UTF-8">
  
