--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
  <meta charset="UTF-8">
  <title>Web開発の練習２</title>
  <link rel="stylesheet" href="mystyle.css">
- <script src="myjs.js"></script><!--この行を追加-->
+ <script src="myjs.js"></script>
 
 <meta charset="UTF-8">
  
 <title>Web開発の練習１</title>
- <link rel="stylesheet" href="mystyle.css"><!--この行を追加--> 
+ <link rel="stylesheet" href="mystyle.css">
 </head> 
 <body>
  <!--文字の大きさの練習-->
