--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@
  <li><a>クラブ・サークル活動</a></li>
   </ul>
  </nav>
+ <h1>イベントハンドラの練習</h1>
+ <input type="button" value="ここをクリック"
+  
 </body>
 </html>
 
