--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 <h1>イベントハンドラの練習</h1>
 <input type="button" value=" ここをクリック"
- ondblclick="alert('Hello,Jurina');">
+ ondblclick="alert('Hello,Jurina!');">
  
 </body>
 </html>
